using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constant 
{
    public static string MAP_NAME = "Map";

}

public static class ConstantAnim
{
    public static string IDLE = "Idle";
    public static string RUN = "Run";
    public static string ATTACK = "Attack";
    public static string ATTACK2 = "Attack2";
    public static string SKILL1 = "Skill1";
    public static string SKILL2 = "Skill2";
    public static string SKILL3 = "Skill3";
    public static string SHOOT = "Shoot";
    public static string DIE = "Die";

}

public static class ConstantTag
{
    public static string ENEMY = "Enemy";
    public static string ALLY = "Ally";
    public static string TOWER = "Tower";
    public static string ATTACKCOLLIDER = "Attack Collider";


}
